# grom

./: CHANGELOG.md  Cargo.toml  README.md
src/: commands.rs  core.rs  main.rs
src/commands/: diary.rs  project.rs  quick_note.rs  sync.rs  utils.rs
src/core/: config.rs  git.rs  utils.rs
