[package]
name = "grom"
description = "CLI for Note Taking"
repository = "https://github.com/alwaysamer/grom"
version = "0.2.2"
readme = "README.md"
edition = "2021"
license = "Apache-2.0"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.8", features = ["derive"]}
cliclack = "0.3.2"
console = "0.15.8"
ctrlc = "3.4.4"
dirs = "5.0.1"
git2 = "0.19.0"
serde = { version = "1.0.204", features = ["derive"]}
toml = "0.8.14"
